--- a/ui/pantry-ui/Dockerfile
+++ b/ui/pantry-ui/Dockerfile
@@ -3,8 +3,8 @@ FROM node:22-alpine
 RUN mkdir /app
 WORKDIR /app
 
-COPY package.json package-lock.json ./
+COPY ui/pantry-ui/package.json ui/pantry-ui/package-lock.json ./
 RUN npm ci
 
-COPY . .
+COPY ui/pantry-ui/. .
 CMD ["ng", "serve", "--host", "0.0.0.0"]
