--- a/ui/pantry-ui/Dockerfile
+++ b/ui/pantry-ui/Dockerfile
@@ -3,6 +3,8 @@ FROM node:22-alpine
 RUN mkdir /app
 WORKDIR /app
 
+RUN  npm install -g @angular/cli@19
+
 COPY ui/pantry-ui/package.json ui/pantry-ui/package-lock.json ./
 RUN npm ci
 
