--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,6 @@ services:
     build:
       context: https://github.com/kevdog114/pantry.git
       dockerfile: ui/pantry-ui/Dockerfile
+    pull_policy: build
     ports:
       - 4200:4200
