--- a/ui/pantry-ui/Dockerfile
+++ b/ui/pantry-ui/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:22-alpine
 
+ARG api_baseurl
+
 RUN mkdir /app
 WORKDIR /app
 
@@ -9,4 +11,6 @@ COPY ui/pantry-ui/package.json ui/pantry-ui/package-lock.json ./
 RUN npm ci
 
 COPY ui/pantry-ui/. .
-CMD ["ng", "serve", "--host", "0.0.0.0"]
+
+RUN sed -i "s|api_base_url_here|${api_baseurl}|g" src/environments/environment.ts
+CMD ["ng", "serve", "--host", "0.0.0.0", "--configuration", "production"]
