--- a/ui/pantry-ui/Dockerfile
+++ b/ui/pantry-ui/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:22-alpine
 
 ARG api_baseurl
+ARG site_title
 
 RUN mkdir /app
 WORKDIR /app
@@ -13,6 +14,7 @@ RUN npm ci
 COPY ui/pantry-ui/. .
 
 RUN sed -i "s|api_base_url_here|$api_baseurl|g" src/environments/environment.production.ts
+RUN sed -i "s|site_title_here|$site_title|g" src/environments/environment.production.ts
 
 
 CMD ["ng", "serve", "--host", "0.0.0.0", "--configuration", "production"]
