--- a/api/config/config.json
+++ b/api/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "dialect": "sqlite",
-    "storage": "pantry.sqlite"
+    "storage": "data/pantry.sqlite"
   },
   "test": {
     "username": "root",
