--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
     "sequelize": "^6.37.5",
+    "sharp": "^0.33.5",
     "sqlite3": "^5.1.7"
   }
 }
