--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: https://github.com/kevdog114/pantry.git
       dockerfile: api/Dockerfile
+    pull_policy: build
     ports:
       - 4300:4300
     env_file:
@@ -18,6 +19,7 @@ services:
       args:
         - api_baseurl=${api_baseurl}
         - site_title=${site_title}
+    pull_policy: build
     ports:
       - 4200:4200
 
