--- a/api/package.json
+++ b/api/package.json
@@ -20,12 +20,12 @@
     "@types/node": "^22.10.6",
     "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
-    "sequelize-cli": "^6.6.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
   "dependencies": {
     "@google/generative-ai": "^0.16.0",
+    "@prisma/client": "^5.7.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -34,8 +34,7 @@
     "express-session": "^1.18.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "sequelize": "^6.37.5",
-    "sharp": "^0.33.5",
-    "sqlite3": "^5.1.7"
+    "prisma": "^5.7.1",
+    "sharp": "^0.33.5"
   }
 }
