--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build-ts": "tsc",
     "build": "npm run build-ts",
-    "serve": "node --inspect dist/src/server.js",
+    "serve": "node --inspect dist/server.js",
     "start": "npm run serve"
   },
   "author": "",
