--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,8 @@
 FROM node:22-alpine
 
-RUN apk add --no-cache python3 py3-setuptools make g++
+ENV PRISMA_SKIP_POSTINSTALL_GENERATE=true
+
+RUN apk add --no-cache python3 py3-setuptools make g++ openssl openssl-dev
 
 RUN mkdir /app
 RUN mkdir /app/data
@@ -12,6 +14,7 @@ RUN npm ci
 
 COPY . .
 
+ENV PRISMA_CLI_BINARY_TARGETS=linux-musl-arm64,linux-musl-x64
 RUN npx prisma generate
 
 RUN chmod +x /app/run.sh
