--- a/ui/pantry-ui/package.json
+++ b/ui/pantry-ui/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "bootstrap": "^5.3.3",
+    "html5-qrcode": "^2.3.8",
     "marked": "^15.0.12",
     "ngx-markdown": "^19.1.1",
     "rxjs": "~7.8.0",
