--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "@google/generative-ai": "^0.16.0",
     "@prisma/client": "^6.16.2",
     "bcryptjs": "^3.0.2",
+    "connect-sqlite3": "^0.9.16",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
