--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^22.10.6",
     "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
+    "@types/socket.io": "^3.0.1",
     "prisma": "^6.16.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
@@ -36,6 +37,7 @@
     "express-session": "^1.18.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "socket.io": "^4.8.3"
   }
 }
