--- a/ui/pantry-ui/package.json
+++ b/ui/pantry-ui/package.json
@@ -24,7 +24,9 @@
     "html5-qrcode": "^2.3.8",
     "marked": "^15.0.12",
     "ngx-markdown": "^19.1.1",
+    "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -33,6 +35,7 @@
     "@angular/cli": "^19.0.7",
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/qrcode": "^1.5.6",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
