--- a/ui/pantry-ui/package.json
+++ b/ui/pantry-ui/package.json
@@ -24,6 +24,7 @@
     "html5-qrcode": "^2.3.8",
     "marked": "^15.0.12",
     "ngx-markdown": "^19.1.1",
+    "pulltorefreshjs": "^0.1.22",
     "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.3",
@@ -35,6 +36,7 @@
     "@angular/cli": "^19.0.7",
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/pulltorefreshjs": "^0.1.7",
     "@types/qrcode": "^1.5.6",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
