--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "@types/express-fileupload": "^1.5.1",
     "@types/express-session": "^1.18.2",
     "@types/node": "^22.10.6",
+    "@types/node-cron": "^3.0.11",
     "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
     "@types/socket.io": "^3.0.1",
@@ -35,6 +36,7 @@
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
     "express-session": "^1.18.2",
+    "node-cron": "^4.2.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "sharp": "^0.33.5",
