--- a/.github/workflows/publish-app.yml
+++ b/.github/workflows/publish-app.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           context: api
           file: api/Dockerfile
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/pantry-api:latest
 
@@ -43,6 +43,6 @@ jobs:
         with:
           context: ui/pantry-ui
           file: ui/pantry-ui/Dockerfile
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/pantry-ui:latest
