--- a/ui/pantry-ui/Dockerfile
+++ b/ui/pantry-ui/Dockerfile
@@ -27,6 +27,7 @@ COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
+COPY entrypoint.sh /app/entrypoint.sh
 RUN chmod +x /app/entrypoint.sh
 ENTRYPOINT ["/app/entrypoint.sh"]
 
