--- a/ui/pantry-ui/package.json
+++ b/ui/pantry-ui/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^19.0.0",
     "bootstrap": "^5.3.3",
     "html5-qrcode": "^2.3.8",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "marked": "^15.0.12",
     "ngx-markdown": "^19.1.1",
     "qrcode": "^1.5.4",
