--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.16.0",
     "@prisma/client": "^6.16.2",
+    "@types/fluent-ffmpeg": "^2.1.28",
     "bcryptjs": "^3.0.2",
     "connect-sqlite3": "^0.9.16",
     "cors": "^2.8.5",
@@ -36,7 +37,9 @@
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
     "express-session": "^1.18.2",
+    "fluent-ffmpeg": "^2.1.3",
     "node-cron": "^4.2.1",
+    "node-nlp": "^5.0.0-alpha.5",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "sharp": "^0.33.5",
