--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - 10300:10300
     volumes:
       - pantry_whisper:/data
-    command: --model tiny --language en
+    command: --model tiny --language en --initial-prompt "pantry kitchen food ingredients recipe shopping list add remove cook bake fridge freezer canned dry goods spices dairy meat vegetables fruit"
 
 volumes:
   pantry_data:
