--- a/rpi-kiosk/Dockerfile
+++ b/rpi-kiosk/Dockerfile
@@ -41,6 +41,8 @@ RUN apt-get update && apt-get install -y \
     libusb-1.0-0 \
     x11-xserver-utils \
     ca-certificates \
+    python3-pjsua \
+    alsa-utils \
     --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
