--- a/ui/pantry-ui/angular.json
+++ b/ui/pantry-ui/angular.json
@@ -42,7 +42,8 @@
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.production.ts"
                 }
-              ]
+              ],
+              "serviceWorker": "ngsw-config.json"
             },
             "development": {
               "optimization": false,
