--- a/ui/pantry-ui/package.json
+++ b/ui/pantry-ui/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@angular/service-worker": "^19.0.0",
     "bootstrap": "^5.3.3",
     "html5-qrcode": "^2.3.8",
     "jspdf": "^4.0.0",
