--- a/.releaserc.json
+++ b/.releaserc.json
@@ -8,7 +8,7 @@
         [
             "@semantic-release/exec",
             {
-                "prepareCmd": "npm version ${nextRelease.version} --prefix api --no-git-tag-version --allow-same-version && npm version ${nextRelease.version} --prefix ui/pantry-ui --no-git-tag-version --allow-same-version"
+                "prepareCmd": "npm version ${nextRelease.version} --prefix api --no-git-tag-version --allow-same-version && npm version ${nextRelease.version} --prefix ui/pantry-ui --no-git-tag-version --allow-same-version && sed -i \"s/appVersion: '.*'/appVersion: '${nextRelease.version}'/g\" ui/pantry-ui/src/environments/environment.ts"
             }
         ],
         [
@@ -18,7 +18,8 @@
                     "api/package.json",
                     "api/package-lock.json",
                     "ui/pantry-ui/package.json",
-                    "ui/pantry-ui/package-lock.json"
+                    "ui/pantry-ui/package-lock.json",
+                    "ui/pantry-ui/src/environments/environment.ts"
                 ],
                 "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
             }
