--- a/api/package.json
+++ b/api/package.json
@@ -27,7 +27,8 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.16.0",
+    "@google/genai": "^1.40.0",
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.16.2",
     "@types/fluent-ffmpeg": "^2.1.28",
     "@types/web-push": "^3.6.4",
