--- a/stack.dev.env
+++ b/stack.dev.env
@@ -3,3 +3,9 @@ ALLOW_ORIGin=http://localhost:4200
 SITE_TITLE=Pantry
 GEMINI_API_KEY=dummy_key
 DEFAULT_ADMIN_PASSWORD=admin
+
+# Playwright MCP Configuration (use localhost for local dev, container name for Docker)
+PLAYWRIGHT_MCP_HOST=localhost
+PLAYWRIGHT_MCP_PORT=8931
+PLAYWRIGHT_NOVNC_HOST=localhost
+PLAYWRIGHT_NOVNC_PORT=6080
