--- a/stack.env
+++ b/stack.env
@@ -2,3 +2,9 @@ API_BASEURL=http://localhost:4300
 ALLOW_ORIGIN=http://localhost:4200
 SITE_TITLE=Pantry
 GEMINI_API_KEY=dummy_key
+
+# Playwright MCP Configuration
+PLAYWRIGHT_MCP_HOST=playwright-mcp
+PLAYWRIGHT_MCP_PORT=8931
+PLAYWRIGHT_NOVNC_HOST=playwright-mcp
+PLAYWRIGHT_NOVNC_PORT=6080
