--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,10 @@ services:
       - stack.env
     environment:
       - DEFAULT_ADMIN_PASSWORD=${DEFAULT_ADMIN_PASSWORD}
+      - PLAYWRIGHT_MCP_HOST=${PLAYWRIGHT_MCP_HOST:-playwright-mcp}
+      - PLAYWRIGHT_MCP_PORT=${PLAYWRIGHT_MCP_PORT:-8931}
+      - PLAYWRIGHT_NOVNC_HOST=${PLAYWRIGHT_NOVNC_HOST:-playwright-mcp}
+      - PLAYWRIGHT_NOVNC_PORT=${PLAYWRIGHT_NOVNC_PORT:-6080}
     volumes:
       - pantry_data:/app/data
       - /etc/localtime:/etc/localtime:ro
