--- a/stack.dev.env
+++ b/stack.dev.env
@@ -2,6 +2,7 @@ API_BASEURL=http://localhost:4300
 ALLOW_ORIGin=http://localhost:4200
 SITE_TITLE=Pantry
 GEMINI_API_KEY=dummy_key
+TZ=America/Chicago
 DEFAULT_ADMIN_PASSWORD=admin
 
 
