--- a/stack.env
+++ b/stack.env
@@ -2,5 +2,6 @@ API_BASEURL=http://localhost:4300
 ALLOW_ORIGIN=http://localhost:4200
 SITE_TITLE=Pantry
 GEMINI_API_KEY=dummy_key
+TZ=America/Chicago
 
 
