--- a/playwright-mcp/supervisord.conf
+++ b/playwright-mcp/supervisord.conf
@@ -34,7 +34,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:novnc]
-command=/opt/novnc/utils/novnc_proxy --vnc localhost:%(ENV_VNC_PORT)s --listen %(ENV_NOVNC_PORT)s
+command=/opt/novnc/utils/novnc_proxy --vnc 127.0.0.1:%(ENV_VNC_PORT)s --listen 0.0.0.0:%(ENV_NOVNC_PORT)s --web /opt/novnc --no-ssl
 autorestart=true
 priority=400
 startsecs=5
