fix: again again

--- a/playwright-mcp/supervisord.conf
+++ b/playwright-mcp/supervisord.conf
@@ -24,7 +24,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:x11vnc]
-command=/usr/bin/x11vnc -display :99 -forever -shared -rfbport %(ENV_VNC_PORT)s -passwd %(ENV_VNC_PASSWORD)s -xkb -noxrecord -noxfixes -noxdamage -nowebsocket
+command=/usr/bin/x11vnc -display :99 -forever -shared -rfbport %(ENV_VNC_PORT)s -passwd %(ENV_VNC_PASSWORD)s -xkb -noxrecord -noxfixes -noxdamage -nowebsvc
 autorestart=true
 priority=300
 startsecs=5
