--- a/playwright-mcp/supervisord.conf
+++ b/playwright-mcp/supervisord.conf
@@ -33,8 +33,8 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
-[program:novnc]
-command=/opt/novnc/utils/novnc_proxy --vnc 127.0.0.1:%(ENV_VNC_PORT)s --listen %(ENV_NOVNC_PORT)s --web /opt/novnc
+[program:websockify]
+command=/usr/local/bin/websockify --web /opt/novnc 0.0.0.0:%(ENV_NOVNC_PORT)s 127.0.0.1:%(ENV_VNC_PORT)s
 autorestart=true
 priority=400
 startsecs=5
