--- a/playwright-mcp/supervisord.conf
+++ b/playwright-mcp/supervisord.conf
@@ -3,8 +3,8 @@ nodaemon=true
 logfile=/var/log/supervisord.log
 pidfile=/var/run/supervisord.pid
 
-[program:xvfb]
-command=/usr/bin/Xvfb :99 -screen 0 %(ENV_SCREEN_WIDTH)sx%(ENV_SCREEN_HEIGHT)sx%(ENV_SCREEN_DEPTH)s
+[program:xvnc]
+command=/usr/bin/Xvnc :99 -geometry %(ENV_SCREEN_WIDTH)sx%(ENV_SCREEN_HEIGHT)s -depth %(ENV_SCREEN_DEPTH)s -rfbport %(ENV_VNC_PORT)s -SecurityTypes None -AlwaysShared -AcceptKeyEvents -AcceptPointerEvents -AcceptSetDesktopSize -SendCutText -AcceptCutText
 autorestart=true
 priority=100
 stdout_logfile=/dev/stdout
@@ -17,16 +17,6 @@ command=/usr/bin/fluxbox
 environment=DISPLAY=":99"
 autorestart=true
 priority=200
-startsecs=5
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-
-[program:x11vnc]
-command=/usr/bin/x11vnc -display :99 -forever -shared -rfbport %(ENV_VNC_PORT)s -passwd %(ENV_VNC_PASSWORD)s -xkb -noxrecord -noxfixes -noxdamage -httpport -1
-autorestart=true
-priority=300
 startsecs=5
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
