fix: playwright again

--- a/playwright-mcp/Dockerfile
+++ b/playwright-mcp/Dockerfile
@@ -12,6 +12,7 @@ RUN apt-get update && apt-get install -y \
     python3-pip \
     git \
     supervisor \
+    socat \
     && rm -rf /var/lib/apt/lists/*
 
 # Install websockify and noVNC
