--- a/playwright-mcp/supervisord.conf
+++ b/playwright-mcp/supervisord.conf
@@ -34,11 +34,21 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:playwright-mcp]
-command=npx @playwright/mcp@latest --port %(ENV_MCP_PORT)s --browser chromium
+command=npx @playwright/mcp@latest --port 8932 --browser chromium
 environment=DISPLAY=":99"
 autorestart=true
 priority=500
 startsecs=10
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+
+[program:mcp-forwarder]
+command=/usr/bin/socat TCP-LISTEN:8931,fork,reuseaddr TCP:127.0.0.1:8932
+autorestart=true
+priority=600
+startsecs=5
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
