--- a/playwright-mcp/supervisord.conf
+++ b/playwright-mcp/supervisord.conf
@@ -34,7 +34,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:playwright-mcp]
-command=npx @playwright/mcp@latest --port 8932 --browser chromium
+command=npx @playwright/mcp@latest --port 8931 --browser chromium
 environment=DISPLAY=":99"
 autorestart=true
 priority=500
@@ -45,7 +45,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:mcp-forwarder]
-command=/usr/bin/socat TCP-LISTEN:8931,fork,reuseaddr TCP:127.0.0.1:8932
+command=/usr/bin/socat TCP4-LISTEN:8930,bind=0.0.0.0,fork,reuseaddr TCP4:127.0.0.1:8931
 autorestart=true
 priority=600
 startsecs=5
