--- a/api/package.json
+++ b/api/package.json
@@ -40,6 +40,7 @@
     "express-fileupload": "^1.5.1",
     "express-session": "^1.18.2",
     "fluent-ffmpeg": "^2.1.3",
+    "mqtt": "^5.15.0",
     "node-cron": "^4.2.1",
     "node-nlp": "^5.0.0-alpha.5",
     "passport": "^0.7.0",
