--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,11 @@ services:
       - PLAYWRIGHT_NOVNC_HOST=${PLAYWRIGHT_NOVNC_HOST:-playwright-mcp}
       - PLAYWRIGHT_NOVNC_PORT=${PLAYWRIGHT_NOVNC_PORT:-6080}
       - TZ=${TZ:-UTC}
+      - MQTT_BROKER=${MQTT_BROKER:-}
+      - MQTT_PORT=${MQTT_PORT:-1883}
+      - MQTT_USER=${MQTT_USER:-}
+      - MQTT_PASSWORD=${MQTT_PASSWORD:-}
+      - MQTT_TOPIC_PREFIX=${MQTT_TOPIC_PREFIX:-pantry}
     volumes:
       - pantry_data:/app/data
   pantry-ui:
